--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="primary">#557AFF</color>
+    <color name="secondary">#F0F3FF</color>
+    <color name="warning">#CCFF8B</color>
+    <color name="text">#080C19</color>
+    <color name="text_alt">#000F43</color>
+    <color name="body">#292929</color>
+    <color name="zone">#B8B8B8</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
