--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,7 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            app:cornerRadius="100dp"
+            app:cornerRadius="@dimen/button_corners_round"
             android:text="@string/action_sign_in_short"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
