--- a/app/src/main/res/layout/loading_overlay.xml
+++ b/app/src/main/res/layout/loading_overlay.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/loading_overlay"
     android:animateLayoutChanges="true"
     android:layout_width="match_parent"
@@ -20,6 +21,9 @@
         android:id="@+id/loading_error_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:layout_gravity="center"
+        android:visibility="gone"
+        tools:text="An error has occurred"
+        tools:visibility="visible"/>
 
 </FrameLayout>
