feat: implemented document list tag filtering

--- a/app/src/main/res/menu/documents_list_menu.xml
+++ b/app/src/main/res/menu/documents_list_menu.xml
@@ -31,4 +31,9 @@
             </group>
         </menu>
     </item>
+    <item
+        android:id="@+id/documents_menu_filter"
+        android:title="@string/label_documents_menu_filter"
+        android:icon="@drawable/ic_funnel"
+        app:showAsAction="ifRoom"/>
 </menu>
