--- a/app/src/main/res/layout/activity_documents_main.xml
+++ b/app/src/main/res/layout/activity_documents_main.xml
@@ -7,10 +7,26 @@
     android:layout_height="match_parent"
     android:layout_marginTop="?attr/actionBarSize">
 
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/documents_tags_filter_group"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="10dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/documents_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/documents_tags_filter_group"
+        app:layout_constraintVertical_bias="0.0"
         tools:listitem="@layout/document_item">
 
     </androidx.recyclerview.widget.RecyclerView>
