feat: added document tag crud UI & other improvements

--- a/app/src/main/res/layout/activity_documents_main.xml
+++ b/app/src/main/res/layout/activity_documents_main.xml
@@ -33,4 +33,6 @@
 
     <include android:id="@+id/documents_loading" layout="@layout/loading_overlay" tools:visibility="gone" />
 
+    <include android:id="@+id/documents_empty" layout="@layout/empty_overlay" android:visibility="gone" tools:visibility="gone" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
