--- a/app/src/main/res/layout/activity_document_editor.xml
+++ b/app/src/main/res/layout/activity_document_editor.xml
@@ -1,87 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="30dp"
-    tools:context=".documents.ui.DocumentEditorActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/linearLayoutCompat"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:padding="30dp"
+        tools:context=".documents.ui.DocumentEditorActivity">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/document_name_edittext_layout"
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/linearLayoutCompat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:hint="@string/label_document_name">
+            android:orientation="vertical"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/document_name_edittext"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/document_name_edittext_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text" />
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:hint="@string/label_document_name">
 
-        </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/document_name_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text" />
 
-        <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/document_shared_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/label_document_shared" />
+            </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/document_tags_chip_group"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:chipSpacingVertical="@dimen/document_form_chips_vertical_spacing">
+            <androidx.appcompat.widget.AppCompatCheckBox
+                android:id="@+id/document_shared_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_document_shared" />
 
-        </com.google.android.material.chip.ChipGroup>
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/document_tags_chip_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:chipSpacingVertical="@dimen/document_form_chips_vertical_spacing">
+
+            </com.google.android.material.chip.ChipGroup>
+
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/document_tags_chooser_button"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/action_select_tags"
+                android:theme="@style/Theme.MaterialComponents"
+                app:cornerRadius="@dimen/button_corners_round" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center">
+
+                <include
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/document_file_chooser_button"
+                    layout="@layout/home_button"
+                    android:layout_marginEnd="10dp"
+                    app:icon="@{@drawable/ic_file}"
+                    app:text="@{@string/action_select_file}" />
+
+                <include
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/document_scanner_button"
+                    layout="@layout/home_button"
+                    app:icon="@{@drawable/ic_camera}"
+                    app:text="@{@string/action_scan}" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+            <!--<com.google.android.material.button.MaterialButton
+                android:id="@+id/document_file_chooser_button"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/action_select_file"
+                android:theme="@style/Theme.MaterialComponents"
+                app:cornerRadius="@dimen/button_corners_round" />-->
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/document_chosen_file_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:visibility="gone"
+                android:text="@string/label_chosen_file"/>
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/document_tags_chooser_button"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:id="@+id/document_upload_form_send_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/action_select_tags"
-            android:theme="@style/Theme.MaterialComponents"
-            app:cornerRadius="@dimen/button_corners_round" />
+            app:cornerRadius="@dimen/button_corners_round"
+            android:text="@string/action_send_upload_form"
+            android:backgroundTint="?attr/colorPrimary"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/document_file_chooser_button"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/action_select_file"
-            android:theme="@style/Theme.MaterialComponents"
-            app:cornerRadius="@dimen/button_corners_round" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/document_chosen_file_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:visibility="gone"
-            android:text="@string/label_chosen_file"/>
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/document_upload_form_send_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cornerRadius="@dimen/button_corners_round"
-        android:text="@string/action_send_upload_form"
-        android:backgroundTint="?attr/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
