--- a/app/src/main/res/layout/activity_document_editor.xml
+++ b/app/src/main/res/layout/activity_document_editor.xml
@@ -47,8 +47,6 @@
 
             </com.google.android.material.chip.ChipGroup>
 
-
-
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/document_tags_chooser_button"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
@@ -56,7 +54,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/action_select_tags"
                 android:theme="@style/Theme.MaterialComponents"
-                app:cornerRadius="@dimen/button_corners_round" />
+                app:cornerRadius="@dimen/button_corners_round"
+                android:layout_marginBottom="10dp" />
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
