--- a/app/src/main/res/layout/scanned_page.xml
+++ b/app/src/main/res/layout/scanned_page.xml
@@ -2,19 +2,44 @@
 <com.google.android.material.card.MaterialCardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/scanned_page_card"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="25dp"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="12dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
+    
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/scanned_page_constraint"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/scanned_page_image"
-        android:layout_width="100dp"
-        android:layout_height="141.4dp" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/scanned_page_image"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="1:1.41428"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/scanned_page_delete_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:text="@string/label_document_scanner_page_delete"
+            android:textColor="@color/destructive"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            app:cornerRadius="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/scanned_page_image"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
