--- a/app/src/main/res/layout/activity_document_editor.xml
+++ b/app/src/main/res/layout/activity_document_editor.xml
@@ -61,6 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginBottom="10dp"
                 android:gravity="center">
 
                 <include
@@ -81,15 +82,6 @@
                     app:text="@{@string/action_scan}" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
-
-            <!--<com.google.android.material.button.MaterialButton
-                android:id="@+id/document_file_chooser_button"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/action_select_file"
-                android:theme="@style/Theme.MaterialComponents"
-                app:cornerRadius="@dimen/button_corners_round" />-->
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/document_chosen_file_text"
