--- a/app/src/main/res/layout/loading_overlay.xml
+++ b/app/src/main/res/layout/loading_overlay.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:visibility="gone"
-        tools:text="An error has occurred"
+        tools:text="@string/unknown_error_occurred"
         tools:visibility="visible"/>
 
 </FrameLayout>
