--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="gray">#525252</color>
     <color name="destructive">#EF4444</color>
     <color name="success">#22c55e</color>
+    <color name="ensias">#FF0021</color>
 
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
