--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -84,4 +84,13 @@
         <item name="chipBackgroundColor">@color/primary_transparent</item>
     </style>
 
+    <style name="Theme.SchoolMate.UserDetailsName" parent="TextAppearance.MaterialComponents.Headline4">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/text</item>
+    </style>
+
+    <style name="Theme.SchoolMate.UserDetailsEmail" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="android:textColor">@color/text</item>
+    </style>
+
 </resources>
