--- a/app/src/main/res/layout/school_zone_item.xml
+++ b/app/src/main/res/layout/school_zone_item.xml
@@ -1,35 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/school_zone_details_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="15dp"
-    tools:context=".schoolnavigation.ui.SchoolZoneEditorFragment">
+    android:layout_height="wrap_content"
+    android:background="?attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/school_zone_item_details"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/zone_name"
+            android:id="@+id/school_zone_item_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/zone_title_placeholder"
-            android:textAppearance="@style/TextAppearance.SchoolMate.Headline4" />
+            style="@style/TextAppearance.SchoolMate.ListItemTitle"
+            tools:text="Bloc A" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/zone_description"
+            android:id="@+id/school_zone_item_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/zone_description_placeholder"
-            android:textAppearance="@style/TextAppearance.SchoolMate.Body2" />
+            style="@style/TextAppearance.SchoolMate.Body2"
+            tools:text="Boys living place" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
