--- a/app/src/main/res/layout/activity_complaints.xml
+++ b/app/src/main/res/layout/activity_complaints.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -25,10 +25,12 @@
             android:id="@+id/complaints_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/complaints_tab_layout_description"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
 
     </com.google.android.material.appbar.AppBarLayout>
+
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -45,4 +47,15 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/complaint_add_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_megaphone"
+        app:tint="@color/white"
+        android:contentDescription="@string/action_add_complaint"/>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
