--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="black_opacity_low">#0D000000</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="complaint_status_background_primary">#FFEFDC</color>
