--- a/app/src/main/res/layout/activity_school_navigation.xml
+++ b/app/src/main/res/layout/activity_school_navigation.xml
@@ -30,11 +30,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:visibility="gone"
         android:clickable="true"
         android:focusable="true"
         app:cardCornerRadius="100dp"
         app:layout_constraintStart_toEndOf="@+id/school_navigation_back_button"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:layout_width="40dp"
