feat: added a new tab layout style to match the mockup design

--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -90,6 +90,7 @@
             android:id="@+id/user_details_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/Widget.SchoolMate.TabLayout"
             app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
     </com.google.android.material.appbar.AppBarLayout>
