feat: adding the second fragment

--- a/app/src/main/res/layout/fragment_published_alerts.xml
+++ b/app/src/main/res/layout/fragment_published_alerts.xml
@@ -3,12 +3,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".alerts.ui.PublishedAlertsFragment">
+    tools:context=".alerts.ui.MyAlertsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/my_published_alerts_swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/my_published_alerts_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <include android:id="@+id/my_published_alerts_loading" layout="@layout/loading_overlay" tools:visibility="gone" />
+
+            <include android:id="@+id/my_published_alerts_list_empty" layout="@layout/empty_overlay" tools:visibility="gone" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </FrameLayout>
