--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="black_opacity_low">#0D000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="gray_low">#777777</color>
     <color name="complaint_status_background_primary">#FFEFDC</color>
     <color name="complaint_status_background_secondary">#FFFFFF</color>
     <color name="complaint_status_pending">#FF8A00</color>
@@ -33,4 +34,5 @@
     <color name="complaint_status_resolving">#157315</color>
     <color name="complaint_status_resolved">#14532D</color>
     <color name="complaint_status_unresolved">#000000</color>
+    <color name="red">#FF1100</color>
 </resources>
