--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -70,6 +70,17 @@
         <item name="android:textColor">@color/gray</item>
     </style>
 
+    <style name="TextAppearance.SchoolMate.ComplaintDetails" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textColor">@color/body</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextAppearance.SchoolMate.ComplaintItemDetail" parent="TextAppearance.MaterialComponents.Body2">
+        <item name="android:textColor">@color/gray_low</item>
+        <item name="android:paddingStart">8dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <style name="TextAppearance.SchoolMate.HomeSectionTitle" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/text</item>
@@ -86,6 +97,11 @@
 
     <style name="Theme.SchoolMate.TagChip" parent="Widget.MaterialComponents.Chip.Action">
         <item name="chipBackgroundColor">@color/primary_transparent</item>
+    </style>
+
+    <style name="ComplaintDetailsIcon">
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:paddingEnd">12dp</item>
     </style>
 
 </resources>
