--- a/app/src/main/res/layout/edit_facilities_problem.xml
+++ b/app/src/main/res/layout/edit_facilities_problem.xml
@@ -9,6 +9,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/facility_type_input_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
