--- a/app/src/main/res/layout/edit_room_complaint.xml
+++ b/app/src/main/res/layout/edit_room_complaint.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/room_number_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="text|number"/>
+                android:inputType="text"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
