feat: Adding the main activity for place suggestions and adding some features to existing documents

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -99,10 +99,20 @@
                 <include
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="13dp"
                     android:id="@+id/users_home_button"
                     layout="@layout/home_button"
                     app:icon="@{@drawable/ic_user}"
                     app:text="@{@string/users_title}" />
+
+                <include
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="13dp"
+                    android:id="@+id/suggestions_home_button"
+                    layout="@layout/home_button"
+                    app:icon="@{@drawable/ic_suggestions}"
+                    app:text="@{@string/suggestions_title}" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
