--- a/app/src/main/res/layout/fragment_user_documents.xml
+++ b/app/src/main/res/layout/fragment_user_documents.xml
@@ -21,7 +21,7 @@
 
             <include android:id="@+id/user_details_shared_documents_loading" layout="@layout/loading_overlay" tools:visibility="gone" />
 
-            <include android:id="@+id/user_details_shared_documents_empty" layout="@layout/empty_overlay" tools:visibility="gone" />
+            <include android:id="@+id/user_details_shared_documents_empty" layout="@layout/empty_overlay" tools:visibility="gone" android:visibility="gone" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
