--- a/app/src/main/res/layout/complaint_item.xml
+++ b/app/src/main/res/layout/complaint_item.xml
@@ -29,6 +29,8 @@
                     style="@style/TextAppearance.SchoolMate.ListItemTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:ellipsize="end"
                     android:text="@string/complaint_title_preview" />
 
                 <androidx.appcompat.widget.AppCompatTextView
