--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -100,6 +100,7 @@
                         android:tint="?attr/colorPrimary" />
 
                     <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/complaints_home_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -120,6 +121,7 @@
                     android:paddingStart="4dp"
                     android:paddingEnd="4dp"
                     android:paddingBottom="3dp"
+                    android:visibility="gone"
                     android:background="?attr/selectableItemBackground"
                     android:text="@string/make_complaint"/>
 
